<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MenuPrincipalFragmento">

    <fragment
        android:id="@+id/MenuPrincipalFragmento"
        android:name="com.example.videogames.MenuPrincipalFragmento"
        android:label="@string/menu_principal_label"
        tools:layout="@layout/fragmento_menuprincipal">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SobreFragmento" />
    </fragment>
    <fragment
        android:id="@+id/SobreFragmento"
        android:name="com.example.videogames.SobreFragmento"
        android:label="@string/sobre_fragmento_label"
        tools:layout="@layout/fragmento_sobre">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/MenuPrincipalFragmento" />
    </fragment>
    <fragment
        android:id="@+id/action_ListaJogosFragmento_to_MenuPrincipalFragmento"
        android:name="com.example.videogames.ListaJogosFragmento"
        android:label="@string/lista_jogos_fragmento_label"
        tools:layout="@layout/fragmento_listajogos_fragmento">
        <action
            android:id="@+id/action_ListaJogosFragmento_to_MenuPrincipalFragmento"
            app:destination="@id/MenuPrincipalFragmento" />
        <action
            android:id="@+id/action_ListaLivrosFragment_to_editarLivroFragment"
            app:destination="@id/editarJogoFragmento" />
        <action
            android:id="@+id/action_ListaLivrosFragment_to_eliminarLivroFragment"
            app:destination="@id/eliminarJogoFragmento" />
    </fragment>
    <fragment
        android:id="@+id/editarLivroFragment"
        android:name="com.example.videogames.EditarJogoFragmento"
        android:label="@string/novo_jogo_label"
        tools:layout="@layout/fragmento_editar_jogo">
        <action
            android:id="@+id/action_editarJogoFragmento_to_ListaJogosFragmento"
            app:destination="@id/action_ListaJogosFragmento_to_MenuPrincipalFragmento" />
        <argument
            android:name="jogo"
            app:argType="com.example.videogames.Jogo"
            app:nullable="true" />
    </fragment>
</navigation>